--- a/Corp.Financiero i20/Pages/Index.cshtml
+++ b/Corp.Financiero i20/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Acceso en line a los datos de Corp. i20";
+    ViewData["Title"] = " Corp. i20";
 }
 
 <div class="text-center">
