COLOCACION DE NOMBRE DE LA ETIQUETA EN LA PAG WEB ASP.NET CORE Y MODIFICACIONES EN EL ARIAL

--- a/Corp.Financiero i20/Pages/Index.cshtml
+++ b/Corp.Financiero i20/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = " Corp. i20";
+    ViewData["Title"] = " i20CC ☻";
 }
 
 <div class="text-center">
-    <h4 class="display-4">Corp.Financiero i20</h4>
+    <h5 class="display-4">MODULO FINANCIERO i20CC ☺</h5>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
