--- a/Corp.Financiero i20/Pages/Shared/_Layout.cshtml
+++ b/Corp.Financiero i20/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Corp.Financiero_i20 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - i20CC☺ - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
